# XPlaneConnect

./: .gitignore  .gitmodules  README.md  azure-pipelines.yml
.github/workflow/: build.yml
.github/workflows/: cmake.yml
xpcPlugin/: CMakeLists.txt  ConfigObserver.h  ConfigWindow.cpp  ConfigWindow.h  Configuration.cpp  Configuration.h  DataManager.cpp  DataManager.h  Log.cpp  Log.h  PluginDefs.h  UDPSocket.cpp  XPCPlugin.cpp
xpcPlugin/xpcPlugin/: packages.config  xpcPlugin.sln  xpcPlugin.vcxproj  xpcPlugin.vcxproj.filters
